--- a/BTVN/Day3/Bai1/bai1.css
+++ b/BTVN/Day3/Bai1/bai1.css
@@ -14,11 +14,11 @@ body {
 .form_container {
     width: 42.44444%; /* Độ rộng của form container */
     height: 80%;
-  }
-form{
+    padding: 10px 10px 30px;
     background-color: rgba(194, 192, 192, 0.958);
     text-align: left;
-}
+    border-radius: 5px;
+  }
 .header
 {
     margin-bottom: 30px;
