--- a/BTVN/Day4/Bai4/bai4.css
+++ b/BTVN/Day4/Bai4/bai4.css
@@ -22,7 +22,7 @@ a, i
 {
     color: blue;
 }
-.paragraph1
+.first__paragraph
 {
     margin: 30px 0 20px 0;
 }
@@ -33,16 +33,16 @@ span
     padding: 1px;
     color: rgba(0, 0, 0, 0.723);
 }
-.paragraph2 
+.second__paragraph 
 {
     border: 1px solid black;
     border-radius: 20px;
 }
-.paragraph2 p 
+.second__paragraph p 
 {
     padding: 20px 25px;
 }
-.paragraph2 a 
+.second__paragraph a 
 {
     display: inline-block;
     margin-top: 20px;
