--- a/BTVN/Day6/Bai3/bai3.css
+++ b/BTVN/Day6/Bai3/bai3.css
@@ -1,5 +1,55 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: sans-serif;
+}
 header
 {
     display: flex;
-    height: 100px;
+    /* height: 100px; */
+    margin: 1rem;
+    align-items: center;
+    position: relative;
+}
+img {
+    width: 20vh;
+}
+.category
+{
+    padding: .8rem;
+    background-color: #f5f5f5;
+    border-radius: 1rem ;
+    font-size: .8rem;
+    font-weight: 600;
+    margin-left: .8rem ;
+    cursor: pointer;
+}
+ul
+{
+    display: flex;
+    list-style: none;
+    margin: 0 11vw ;
+}
+li 
+{
+    margin: 0 1rem;
+    cursor: pointer;
+}
+a
+{
+    text-decoration: none;
+    color: black;
+    font-weight: 600;
+}
+button
+{
+    position: absolute;
+    right: 1em;
+    padding: .5rem 1rem;
+    background-image: linear-gradient(to right, #3557ef, #a464e8);
+    border: none;
+    border-radius: 3px;
+    color: #ffffff;
+    cursor: pointer;
 }
