--- a/BTVN/Day6/Bai1/bai1.css
+++ b/BTVN/Day6/Bai1/bai1.css
@@ -11,6 +11,7 @@ body
     display: flex;
     justify-content: center;
     align-items: center;
+    font-family: "Lato", sans-serif;
 }
 .content_container
 {
