--- a/BTVN/Day6/Bai3/bai3.css
+++ b/BTVN/Day6/Bai3/bai3.css
@@ -19,7 +19,7 @@ img
 .btn_category
 {
     padding: .8rem;
-    background-color: #7572725b;
+    background-color: #f5f5f5;
     border-radius: 1rem ;
     font-size: .8rem;
     font-weight: 600;
