--- a/BTVN/Day7/Bai2/bai2.css
+++ b/BTVN/Day7/Bai2/bai2.css
@@ -8,7 +8,7 @@
 }
 body
 {
-    background: url(http://uiwebsoft.com/justlog/login-one/images/login-bg2.jpg) no-repeat;
+    background: url(../bg.jpg) no-repeat;
     background-size: cover;
     background-position: 100% 100%;
     height: 100vh;
@@ -197,6 +197,7 @@ a
     border: none;
     color: #ff574d;
     cursor: pointer;
+    border-radius: 3px;
 }
 .social a
 {
