--- a/BTVN/Day9/Bai1/bai1.css
+++ b/BTVN/Day9/Bai1/bai1.css
@@ -163,6 +163,7 @@
     -webkit-background-clip: text;
     background-clip: text;
     -webkit-text-fill-color: transparent;
+    font-family: var(--text-font), sans-serif;
 }
 .sec_img .overlay span:nth-child(2)
 {
@@ -176,5 +177,5 @@
     -webkit-background-clip: text;
     background-clip: text;
     -webkit-text-fill-color: transparent;
-
+    font-family: var(--text-font), sans-serif;
 }
