--- a/BTVN/Day10/Bai3/bai3.css
+++ b/BTVN/Day10/Bai3/bai3.css
@@ -22,7 +22,7 @@ body
     position: relative;
     transition: transform .3s ease;
 }   
-.cover
+.outline
 {
     width: 300px;
     height: 200px;
